Fix mobile view, overflow-x
Add parallax effects

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
 html, body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 .title-font {
@@ -55,4 +56,8 @@ img.image-gallery-thumbnail-image {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+svg.wave {
+  position: relative;
 }
